--- a/src/html/blog-item-media.html
+++ b/src/html/blog-item-media.html
@@ -10,11 +10,10 @@
             @@include('./Breadcrumbs/index.html')
           
             <sectin class="blog-item-media">
-              @@include('./SectionTitle/index.html', {
-                title: 'Наша специализация',
-                textColor: 'linear-gradient(180deg, #17A6D6 0%, #4B33A1 100%)',
-                underLineColor: '#828282',
-              })
+              <h1 class="section-title section-title_blue">
+                <span>Наша специализация</span>
+                <hr>
+              </h1>
 
               <div class="news-context">
                 <div class="news-context__main-image">
