--- a/src/html/inedx.html
+++ b/src/html/inedx.html
@@ -16,10 +16,8 @@
         <div class="main-page">
           <section class="specialization">
             <div class="container">
-              @@include('./SectionTitle/index.html', {
+              @@include('./SectionTitle/BlueTitle.html', {
                 title: 'Наша специализация',
-                textColor: 'linear-gradient(180deg, #17A6D6 0%, #4B33A1 100%)',
-                underLineColor: '#828282',
               })
     
               <div class="specialization-cards-wrapper">
@@ -77,10 +75,8 @@
 
           <section class="partners">
             <div class="container">
-              @@include('./SectionTitle/index.html', {
+              @@include('./SectionTitle/BlueTitle.html', {
                 title: 'Нам доверяют',
-                textColor: 'linear-gradient(180deg, #17A6D6 0%, #4B33A1 100%)',
-                underLineColor: '#828282',
               })
   
               <div class="partners__logos-wrapper">
