--- a/src/html/website-development.html
+++ b/src/html/website-development.html
@@ -14,10 +14,8 @@
 
       <main class="website-development">
         <section class="service-prising">
-          @@include('./SectionTitle/index.html', {
+          @@include('./SectionTitle/GreenTitle.html', {
             title: 'Наша специализация',
-            textColor: 'linear-gradient(180deg, #389A77 0%, #175842 100%)',
-            underLineColor: '#828282',
           })
 
           <div class="peramidon-wrapper">
@@ -208,10 +206,8 @@
 
         <section class="motivation">
           <div class="container">
-            @@include('./SectionTitle/index.html', {
+            @@include('./SectionTitle/GreenTitle.html', {
               title: 'Наша специализация',
-              textColor: 'linear-gradient(180deg, #389A77 0%, #175842 100%)',
-              underLineColor: '#828282',
             })
   
             <h3 class="motivation__subtitle">Десять причин, почему заказывать создание сайтов нужно только у нас 
