--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -3,7 +3,7 @@
   @@include('./utils/head.html')
   <body>
     <div class="wrapper">
-      @@include('./HeaderWithContent/index.html', {
+      @@include('./HeaderWithAnimation/index.html', {
         title: 'Блог о SEO',
         subtitle: 'О самом интересном',
         imgSizeSmPath: './assets/header-bg_sm.jpg',
@@ -15,10 +15,8 @@
       <main>
         <div class="container">
           <section class="blog">
-            @@include('./SectionTitle/index.html', {
+            @@include('./SectionTitle/BlueTitle.html', {
               title: 'Свежие статьи по SEO',
-              textColor: 'linear-gradient(180deg, #17A6D6 0%, #4B33A1 100%)',
-              underLineColor: '#828282',
             })
   
             <p class="blog__subtitle">
