--- a/src/html/faq.html
+++ b/src/html/faq.html
@@ -3,22 +3,20 @@
   @@include('./utils/head.html')
   <body>
     <div class="wrapper">
-      @@include('./HeaderWithContent/index.html', {
+      @@include('./HeaderWithAnimation/index.html', {
         title: 'FAQ',
         subtitle: 'Ответы, на те самые вопросы',
-        imgSizeSmPath: './assets/header-bg-3_sm.jpg',
-        imgSizeMdPath: './assets/header-bg-3_md.jpg',
-        imgSizeLgPath: './assets/header-bg-3_lg.jpg',
-        imgDefault: './assets/header-bg-3_lg.jpg'
+        imgSizeSmPath: './assets/header-bg_sm.jpg',
+        imgSizeMdPath: './assets/header-bg_md.jpg',
+        imgSizeLgPath: './assets/header-bg_lg.jpg',
+        imgDefault: './assets/header-bg_lg.jpg'
       })
 
       <main>
         <div class="container">
           <section class="FAQ">
-            @@include('./SectionTitle/index.html', {
+            @@include('./SectionTitle/BlueTitle.html', {
               title: 'В чем мы сильны?',
-              textColor: 'linear-gradient(180deg, #17A6D6 0%, #4B33A1 100%)',
-              underLineColor: '#828282',
             })
           
             <p class="FAQ__subtitle">
