fixes: add new feature

--- a/src/html-components/BlogCard/index.html
+++ b/src/html-components/BlogCard/index.html
@@ -1,13 +1,15 @@
 <article class="blog-card">
-  <div class="blog-card__image">
-    <img src="@@imgUrl" alt="">
-  </div>
-
-  <h3 class="blog-card__title">
-    @@title
-  </h3>
-
-  <p class="blog-card__text">
-    @@text
-  </p>
+  <a href="#">
+    <div class="blog-card__image">
+      <img src="@@imgUrl" alt="">
+    </div>
+  
+    <h3 class="blog-card__title">
+      @@title
+    </h3>
+  
+    <p class="blog-card__text">
+      @@text
+    </p>
+  </a>
 </article>
