--- a/src/html/blog-item-media.html
+++ b/src/html/blog-item-media.html
@@ -47,9 +47,15 @@
                 </div>
 
                 <div class="news-context__images-wrapper">
-                  <img src="./assets/image/sm-news-img-1.jpg" alt="">
-                  <img src="./assets/image/context.jpg" alt="">
-                  <img src="./assets/image/sm-news-img-2.jpg" alt="">
+                  <a href="./assets/image/sm-news-img-1.jpg">
+                    <img src="./assets/image/sm-news-img-1.jpg" alt="first-img">
+                  </a>
+                  <a href="./assets/image/context.jpg">
+                    <img src="./assets/image/context.jpg" alt="nex-img">
+                  </a>
+                  <a href="./assets/image/sm-news-img-2.jpg">
+                    <img src="./assets/image/sm-news-img-2.jpg" alt="last-img">
+                  </a>
                 </div>
 
                 <div class="video-payer">
