--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -3,7 +3,7 @@
   @@include('./utils/head.html')
   <body>
     <div class="wrapper">
-      @@include('./HeaderWithAnimation/index.html', {
+      @@include('./HeaderWithContent/index.html', {
         title: 'Блог о SEO',
         subtitle: 'О самом интересном',
         imgSizeSmPath: './assets/header-bg_sm.jpg',
@@ -26,7 +26,157 @@
               Эффективно продвигайте и развивайте свои сайты и оставайтесь лидером!
             </p>
 
-            <div class="blog-item__wrapper">
+            <div class="blog-item__wrapper" id="newslist">
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
+              @@include('./BlogCard/index.html', {
+                'imgUrl': './assets/image/context.jpg',
+                'title': 'Типы сайтов',
+                'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
+              })
               @@include('./BlogCard/index.html', {
                 'imgUrl': './assets/image/context.jpg',
                 'title': 'Типы сайтов',
@@ -59,7 +209,7 @@
               })
             </div>
 
-            <button class="btn-show-more-blog-items">
+            <button class="btn-show-more-blog-items" id="loadMore">
               Показать еще
             </button>
           </section>
