--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -8,8 +8,8 @@
         subtitle: 'Свяжитесь с нами',
         imgSizeSmPath: './assets/header-bg_sm.jpg',
         imgSizeMdPath: './assets/header-bg_md.jpg',
-        imgSizeLgPath: './assets/header-bg_lg.jpg',
-        imgDefault: './assets/header-bg_lg.jpg'
+        imgSizeLgPath: './assets/header-bg-1_lg.jpg',
+        imgDefault: './assets/header-bg-1_lg.jpg'
       })
       
 
