--- a/src/html/faq.html
+++ b/src/html/faq.html
@@ -6,10 +6,10 @@
       @@include('./HeaderWithContent/index.html', {
         title: 'FAQ',
         subtitle: 'Ответы, на те самые вопросы',
-        imgSizeSmPath: './assets/header-bg_sm.jpg',
-        imgSizeMdPath: './assets/header-bg_md.jpg',
-        imgSizeLgPath: './assets/header-bg_lg.jpg',
-        imgDefault: './assets/header-bg_lg.jpg'
+        imgSizeSmPath: './assets/header-bg-3_sm.jpg',
+        imgSizeMdPath: './assets/header-bg-3_md.jpg',
+        imgSizeLgPath: './assets/header-bg-3_lg.jpg',
+        imgDefault: './assets/header-bg-3_lg.jpg'
       })
 
       <main>
