--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -6,10 +6,10 @@
       @@include('./HeaderWithContent/index.html', {
         title: 'Блог о SEO',
         subtitle: 'О самом интересном',
-        imgSizeSmPath: './assets/header-bg_sm.jpg',
-        imgSizeMdPath: './assets/header-bg_md.jpg',
-        imgSizeLgPath: './assets/header-bg_lg.jpg',
-        imgDefault: './assets/header-bg_lg.jpg'
+        imgSizeSmPath: './assets/header-bg-4_sm.jpg',
+        imgSizeMdPath: './assets/header-bg-4_md.jpg',
+        imgSizeLgPath: './assets/header-bg-4_lg.jpg',
+        imgDefault: './assets/header-bg-4_lg.jpg'
       })
 
       <main>
