--- a/src/html/website-promotion.html
+++ b/src/html/website-promotion.html
@@ -6,10 +6,10 @@
       @@include('./HeaderWithContent/index.html', {
         title: 'Продвижение сайта',
         subtitle: 'Поднимем ваш сайт в поисковой выдаче',
-        imgSizeSmPath: './assets/header-bg_sm.jpg',
-        imgSizeMdPath: './assets/header-bg_md.jpg',
-        imgSizeLgPath: './assets/header-bg_lg.jpg',
-        imgDefault: './assets/header-bg_lg.jpg'
+        imgSizeSmPath: './assets/header-bg-2_sm.jpg',
+        imgSizeMdPath: './assets/header-bg-2_md.jpg',
+        imgSizeLgPath: './assets/header-bg-2_lg.jpg',
+        imgDefault: './assets/header-bg-2_lg.jpg'
       })
 
       <main>
