--- a/src/html-components/Footer/index.html
+++ b/src/html-components/Footer/index.html
@@ -64,7 +64,7 @@
           <li><a href="#">Продвижение сайтов</a></li>
           <li><a href="#">Разработка сайтов</a></li>
           <li><a href="#">Обучение</a></li>
-          <button class="request-call-btn" type="button">Заказать звонок</button>
+          <button class="request-call-btn" type="button"><span>Заказать звонок</span></button>
         </ul>
 
         <ul class="footer_list footer__last-news">
