--- a/src/html-components/Footer2/index.html
+++ b/src/html-components/Footer2/index.html
@@ -10,7 +10,7 @@
           </div>
           <input type="email"  placeholder="Email*" required>
           <textarea name="" id="" cols="30" rows="10" placeholder="ОТПРАВИТЬ" required></textarea>
-          <button type="submit">ОТПРАВИТЬ</button>
+          <button type="submit"><span>ОТПРАВИТЬ</span></button>
         </form>
       </div>
 
@@ -84,7 +84,7 @@
             <li><a href="#">Продвижение сайтов</a></li>
             <li><a href="#">Разработка сайтов</a></li>
             <li><a href="#">Обучение</a></li>
-            <button class="request-call-btn" type="button">Заказать звонок</button>
+            <button class="request-call-btn" type="button"><span>Заказать звонок</span></button>
           </ul>
       
           <ul class="footer_list footer__last-news">
