--- a/src/html/website-development.html
+++ b/src/html/website-development.html
@@ -198,7 +198,7 @@
                   производственных предприятий в сегменте business-to-business.
                 </p>
 
-                <a class="further-btn">Подробнее</a>
+                <a class="further-btn"><span>Подробнее</span></a>
               </div>
             </div>
           </div>
