--- a/src/html-components/ContactForm/index.html
+++ b/src/html-components/ContactForm/index.html
@@ -16,7 +16,7 @@
         <p>Прикрепить файл</p>
       </label>
       <input id="file-upload" type="file"/>
-      <button class="contacts-form__send-btn">Отправить</button>
+      <button class="contacts-form__send-btn"><span>Отправить</span></button>
     </div>
   </div>
 </form>
