--- a/src/html-components/Footer2/index.html
+++ b/src/html-components/Footer2/index.html
@@ -84,7 +84,7 @@
             <li><a href="#">Продвижение сайтов</a></li>
             <li><a href="#">Разработка сайтов</a></li>
             <li><a href="#">Обучение</a></li>
-            <button class="request-call-btn" type="button"><span>Заказать звонок</span></button>
+            <a href="#" class="request-call-btn" type="button"><span>Заказать звонок</span></a>
           </ul>
       
           <ul class="footer_list footer__last-news">
