--- a/src/html-components/Recomendation/index.html
+++ b/src/html-components/Recomendation/index.html
@@ -23,9 +23,9 @@
     </div>
 
     <div class="btn-wrapper">
-      <button class="btn-show-more-blog-items">
+      <a href="#" class="btn-show-more-blog-items">
         Вернуться к статьям блога
-      </button>
+      </a>
     </div>
   </div>
 
