--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -19,12 +19,12 @@
               title: 'Свежие статьи по SEO',
             })
   
-            <p class="blog__subtitle">
-              Интернет-маркетинг динамично развивается. Приемы и инструменты, которые вчера были эталонным решением сегодня могут не
-              давать прежний результат. В нашем блоге мы расскажем о лучших практиках и актуальных решениях в интернет-маркетинге.
-              <br><br>
-              Эффективно продвигайте и развивайте свои сайты и оставайтесь лидером!
-            </p>
+            <div class="blog__subtitle">
+              <p>Интернет-маркетинг динамично развивается. Приемы и инструменты, которые вчера были эталонным решением сегодня могут не
+                давать прежний результат. В нашем блоге мы расскажем о лучших практиках и актуальных решениях в интернет-маркетинге.</p>
+              <br>
+              <p>Эффективно продвигайте и развивайте свои сайты и оставайтесь лидером!</p>
+            </div>
 
             <div class="blog-item__wrapper" id="newslist">
               @@include('./BlogCard/index.html', {
