--- a/src/html/website-promotion.html
+++ b/src/html/website-promotion.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="skills-tree">
-              <div class="skill-item-wraper skills-item__left">
+              <a href="#" target="_blank" class="skill-item-wraper skills-item__left">
                 <div class="skills-tree__item">
                   <div class="title">
                     Search Engine Optimization
@@ -49,9 +49,9 @@
                 <div class="icone">
                   @@include('../assets/skill-items-icons/search.svg')
                 </div>
-              </div>
+              </a>
 
-              <div class="skill-item-wraper skills-item__right">
+              <a href="#" target="_blank" class="skill-item-wraper skills-item__right">
                 <div class="skills-tree__item">
                   <div class="title">
                     Контекстная реклама 
@@ -65,9 +65,9 @@
                 <div class="icone">
                   @@include('../assets/skill-items-icons/target.svg')
                 </div>
-              </div>
+              </a>
 
-              <div class="skill-item-wraper skills-item__left">
+              <a href="#" target="_blank" class="skill-item-wraper skills-item__left">
                 <div class="skills-tree__item">
                   <div class="title">
                     Social Media Marketing
@@ -82,9 +82,9 @@
                 <div class="icone">
                   @@include('../assets/skill-items-icons/voice.svg')
                 </div>
-              </div>
+              </a>
 
-              <div class="skill-item-wraper skills-item__right">
+              <a href="#" target="_blank" class="skill-item-wraper skills-item__right">
                 <div class="skills-tree__item">
                   <div class="title">
                     Аудит сайта
@@ -98,9 +98,9 @@
                 <div class="icone">
                   @@include('../assets/skill-items-icons/data.svg')
                 </div>
-              </div>
+              </a>
 
-              <div class="skill-item-wraper skills-item__left">
+              <a href="#" target="_blank" class="skill-item-wraper skills-item__left">
                 <div class="skills-tree__item">
                   <div class="title">
                     Аналитика 
@@ -114,9 +114,9 @@
                 <div class="icone">
                   @@include('../assets/skill-items-icons/brain.svg')
                 </div>
-              </div>
+              </a>
 
-              <div class="skill-item-wraper skills-item__right">
+              <a href="#" target="_blank" class="skill-item-wraper skills-item__right">
                 <div class="skills-tree__item">
                   <div class="title">
                     Айдентика
@@ -130,9 +130,9 @@
                 <div class="icone">
                   @@include('../assets/skill-items-icons/fingerprint.svg')
                 </div>
-              </div>
+              </a>
 
-              <div class="skill-item-wraper skills-item__left">
+              <a href="#" target="_blank" class="skill-item-wraper skills-item__left">
                 <div class="skills-tree__item">
                   <div class="title">
                     Юзабилити 
@@ -147,9 +147,9 @@
                 <div class="icone">
                   @@include('../assets/skill-items-icons/eay.svg')
                 </div>
-              </div>
+              </a>
 
-              <div class="skill-item-wraper skills-item__right">
+              <a href="#" target="_blank" class="skill-item-wraper skills-item__right">
                 <div class="skills-tree__item">
                   <div class="title">
                     Копирайтинг 
@@ -163,9 +163,9 @@
                 <div class="icone">
                   @@include('../assets/skill-items-icons/list.svg')
                 </div>
-              </div>
+              </a>
 
-              <div class="skill-item-wraper skills-item__left">
+              <a href="#" target="_blank" class="skill-item-wraper skills-item__left">
                 <div class="skills-tree__item">
                   <div class="title">
                     Мониторинг инфополя
@@ -179,9 +179,9 @@
                 <div class="icone">
                   @@include('../assets/skill-items-icons/chat.svg')
                 </div>
-              </div>
+              </a>
 
-              <div class="skill-item-wraper skills-item__right">
+              <a href="#" target="_blank" class="skill-item-wraper skills-item__right">
                 <div class="skills-tree__item">
                   <div class="title">
                     Выход на новые рынки
@@ -195,9 +195,9 @@
                 <div class="icone">
                   @@include('../assets/skill-items-icons/world.svg')
                 </div>
-              </div>
+              </a>
 
-              <div class="skill-item-wraper skills-item__left">
+              <a href="#" target="_blank" class="skill-item-wraper skills-item__left">
                 <div class="skills-tree__item">
                   <div class="title">
                     Создание сайтов
@@ -211,9 +211,9 @@
                 <div class="icone">
                   @@include('../assets/skill-items-icons/tag.svg')
                 </div>
-              </div>
+              </a>
 
-              <div class="skill-item-wraper skills-item__right">
+              <a href="#" class="skill-item-wraper skills-item__right">
                 <div class="skills-tree__item">
                   <div class="title">
                     CRM-система
@@ -227,7 +227,7 @@
                 <div class="icone">
                   @@include('../assets/skill-items-icons/people.svg')
                 </div>
-              </div>
+              </a>
             </div>
 
             <div class="scuba-diver-wrap">
