--- a/src/html-components/Footer2/index.html
+++ b/src/html-components/Footer2/index.html
@@ -10,7 +10,7 @@
           </div>
           <input type="email"  placeholder="Email*" required>
           <textarea name="" id="" cols="30" rows="10" placeholder="ОТПРАВИТЬ" required></textarea>
-          <button type="submit"><span>ОТПРАВИТЬ</span></button>
+          <button type="submit" id="sendFormMessage"><span>ОТПРАВИТЬ</span></button>
         </form>
       </div>
 
