--- a/src/html-components/Specialization/Items/item-3.html
+++ b/src/html-components/Specialization/Items/item-3.html
@@ -1,8 +1,8 @@
-<div class="specialization-item">
+<a href="@@linkUrl" class="specialization-item">
   <div class="specialization-item__image">
     @@include('../assets/specialization-item-image/Vector-2.svg')
   </div>
   <h3 class="specialization-item__title">@@title</h3>
   <p class="specialization-item__text">@@text</p>
-  <a href="@@linkUrl" class="specialization-item__link">Подробнее</a>
-</div>
+  <p href="@@linkUrl" class="specialization-item__link">Подробнее</p>
+</a>
