--- a/src/html/blog-item.html
+++ b/src/html/blog-item.html
@@ -50,6 +50,12 @@
                   <li>Ex accusamus nostrum placeat excepturi numquam corporis natus. Voluptas quae eos nihil veniam neque fuga, fugit est accusamus harum cum illo, molestias aperiam debitis. Accusantium deleniti omnis modi quis delectus!</li>
                   <li>Quisquam fuga tempore distinctio non magni consectetur corporis laudantium nam error maxime, minima repellat sit illum, dolorem fugiat vitae aliquid similique aperiam nulla, aut rerum voluptate unde officiis ea. Iusto!</li>
                 </ul>
+                <ol>
+                  <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis voluptatem assumenda deserunt qui at autem officiis, aspernatur illum? Neque hic quis dicta quidem, deleniti accusantium recusandae eos odit laudantium ab.</li>
+                  <li>Iure laudantium fugiat impedit repellat dolore laborum incidunt deleniti, rerum possimus non deserunt unde corporis molestiae, dignissimos dolores doloribus porro esse obcaecati in hic libero nostrum harum sapiente eligendi! Aliquam!</li>
+                  <li>Ex accusamus nostrum placeat excepturi numquam corporis natus. Voluptas quae eos nihil veniam neque fuga, fugit est accusamus harum cum illo, molestias aperiam debitis. Accusantium deleniti omnis modi quis delectus!</li>
+                  <li>Quisquam fuga tempore distinctio non magni consectetur corporis laudantium nam error maxime, minima repellat sit illum, dolorem fugiat vitae aliquid similique aperiam nulla, aut rerum voluptate unde officiis ea. Iusto!</li>
+                </ol>
               </div>
             </div>
           </sectin>
